target/debug/build/crossbeam-utils-fec8ddc859f0fe01/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/jmadden/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3101:1
     |
3101 | / atomic_int! {
3102 | |     cfg(target_has_atomic = "16"),
3103 | |     cfg(target_has_atomic_equal_alignment = "16"),
3104 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3116 | |     u16 AtomicU16
3117 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
